# ChladniPlateSimulation

./: CMakeLists.txt
hw4-clothsim-sp24-shruv-3/: CMakeLists.txt
hw4-clothsim-sp24-shruv-3/.cache/clangd/index/: AlignedBox.h.20F5B1B7A50BDBA2.idx  AngleAxis.h.9BC362B910C7793A.idx  Array.h.7F79AE566FA3C3C3.idx  ArrayBase.h.C50A7D4AFF4AC12D.idx  ArrayCwiseBinaryOps.h.69B59EC437E28A78.idx  ArrayCwiseUnaryOps.h.28FC012E3B76C21D.idx  ArrayWrapper.h.689167AF6E2888FF.idx  Assign.h.80DBD646BA1A3F92.idx  AssignEvaluator.h.F6111FA413F223AF.idx  AssignmentFunctors.h.1977C9106BD8D4BF.idx  BDCSVD.h.D21EC69052422B3B.idx  BandMatrix.h.1880C7E015876E41.idx  BinaryFunctors.h.6740F6D8E67DF89D.idx  BlasUtil.h.3BC44B57F48B7C7F.idx  Block.h.AEB3AE5C0E3FF8EC.idx  BlockHouseholder.h.C1BCC5BE6207A74E.idx  BlockMethods.h.A8C6D14764EFDD12.idx  BooleanRedux.h.69E33284F0C58FF4.idx  CGL.h.12D79F038CC1C4B3.idx  Cholesky.275AFAAAEC9C68DE.idx  ColPivHouseholderQR.h.F1A2D17DB63C22C1.idx  CommaInitializer.h.1BF20A1B1F47D96B.idx  CommonCwiseBinaryOps.h.7E9EDD563E43E1DA.idx  CommonCwiseUnaryOps.h.DDF2D9B82B904C61.idx  CompleteOrthogonalDecomposition.h.99AB483107E01331.idx  Complex.h.14BAB4EE0D9EF692.idx  Complex.h.66BD0BEC60552861.idx  ConditionEstimator.h.F84988ECB19258B4.idx  ConjHelper.h.312E38B4A3202533.idx  Constants.h.95A26DDDCCACC9D5.idx  Core.052D9F60888BE80C.idx  CoreEvaluators.h.715A81BEBB69CE3A.idx  CoreIterators.h.CC14F7CB471752F8.idx  CwiseBinaryOp.h.9C7FC4FCB1889AC6.idx  CwiseNullaryOp.h.7B0BA4C99D443D37.idx  CwiseTernaryOp.h.C7C85F2C0C8200DF.idx  CwiseUnaryOp.h.DEC9636C23B0ACB1.idx  CwiseUnaryView.h.D0CAE110D6C92461.idx  DenseBase.h.59D116CD7A2F4B90.idx  DenseCoeffsBase.h.D8238BF7BBA06403.idx  (+255 more)
hw4-clothsim-sp24-shruv-3/glew/: cmake_install.cmake
hw4-clothsim-sp24-shruv-3/glew/include/GL/: wglew.h
hw4-clothsim-sp24-shruv-3/glfw/include/GLFW/: glfw3.h
hw4-clothsim-sp24-shruv-3/glfw/src/: win32_platform.h
hw4-clothsim-sp24-shruv-3/shaders/: Bump.frag  Diffuse.frag  Displacement.frag  Displacement.vert  Mirror.frag  Phong.frag
hw4-clothsim-sp24-shruv-3/src/: ChladniSimulation  Particle.h  Plate.h  Renderer.h  SimpleWindow  Simulation.h  cloth.cpp  final.html  main.cpp  midwaycheck.html
hw4-clothsim-sp24-shruv-3/src/collision/: plane.cpp  sphere.cpp
hw4-clothsim-sp24-shruv-3/website/: index.html
include/: Plate.h  Renderer.h  Simulation.h
include/CGl/: CGL.h  CMakeLists.txt  color.cpp  color.h  complex.cpp  complex.h  console.h  lodepng.cpp  matrix3x3.cpp  matrix3x3.h  matrix4x4.cpp  matrix4x4.h  osdfont.c  osdfont.cpp  osdtext.cpp  osdtext.h  path.cpp  quaternion.cpp  quaternion.h  renderer.h  spectrum.cpp  tinyxml2.cpp  tinyxml2.h  vector2D.cpp  vector2D.h  vector3D.cpp  vector3D.h  vector4D.cpp  vector4D.h  viewer.cpp  viewer.h
src/: Plate.cpp  Renderer.cpp  Simulation.cpp  main.cpp
